<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".About"  >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp">

	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:background="@drawable/sombre"
	        android:paddingTop="5dp"
	        android:scaleType="centerInside"
	        android:layout_gravity="center"
	        android:src="@drawable/created_by_ertyguy" />
	    
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginBottom="15dp"
		    android:padding="10dp"
		    android:background="@color/light_grey" >
	    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/about_ver"
		        android:gravity="top"
		        android:paddingRight="5dip"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/about_ver_num"
		        android:textColor="@color/grey_text"
		        android:gravity="top"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>
	
	    <LinearLayout 
	        android:id="@+id/contact_me"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginBottom="15dp"
		    android:padding="10dp"
		    android:background="@color/light_grey" >
	    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="top"
		        android:paddingRight="5dip"
		        android:text="@string/about_contact"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"	        
		        android:text="@string/about_think"
		        android:textColor="@color/grey_text"
		        android:gravity="top"
		        android:paddingBottom="5dp"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>
		
	
	    <LinearLayout 
	        android:id="@+id/rate_app"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginBottom="15dp"
		    android:padding="10dp"
		    android:background="@color/light_grey" >
	    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/about_rate"
		        android:paddingRight="5dip"
		        android:gravity="top"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"	        
		        android:text="@string/about_support"
		        android:textColor="@color/grey_text"
		        android:gravity="top"
		        android:paddingBottom="5dp"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>			
	    
	</LinearLayout>
    
</ScrollView>