<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Settings"  >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp" >
	

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:background="@color/light_grey"
	        android:orientation="horizontal"
	        android:padding="10dp" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:layout_toLeftOf="@+id/toggle_notifications"
	            android:gravity="center_vertical"
	            android:paddingRight="5dip"
	            android:text="@string/settings_notification"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <ToggleButton
	            android:id="@+id/toggle_notifications"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true" />
	    </RelativeLayout>
	
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:background="@color/light_grey"
	        android:orientation="horizontal"
	        android:padding="10dp" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_toLeftOf="@+id/picker_mobile"
	            android:layout_centerVertical="true"
	            android:gravity="center_vertical"
	            android:paddingRight="5dip"
	            android:text="@string/settings_mobile"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <Spinner
	            android:id="@+id/picker_mobile"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_alignParentRight="true"
	            android:entries="@array/timings_array" />
	
		</RelativeLayout>
		
	
	        <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:background="@color/light_grey"
	        android:orientation="horizontal"
	        android:padding="10dp" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_toLeftOf="@+id/picker_wifi"
	            android:layout_centerVertical="true"
	            android:gravity="center_vertical"
	            android:paddingRight="5dip"
	            android:text="@string/settings_wifi"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <Spinner
	            android:id="@+id/picker_wifi"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_alignParentRight="true"
	            android:entries="@array/timings_array" />
		</RelativeLayout>
		
	        
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:background="@color/light_grey"
	        android:orientation="horizontal"
	        android:padding="10dp" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:layout_toLeftOf="@+id/toggle_notifications_on_boot"
	            android:gravity="center_vertical"
	            android:paddingRight="5dip"
	            android:text="@string/settings_boot"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <ToggleButton
	            android:id="@+id/toggle_notifications_on_boot"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true" />
	    </RelativeLayout>
	    
	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:background="@color/light_grey"
	        android:orientation="horizontal"
	        android:padding="10dp" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:layout_toLeftOf="@+id/toggle_notifications_icon"
	            android:gravity="center_vertical"
	            android:paddingRight="5dip"
	            android:text="@string/settings_logo"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <ToggleButton
	            android:id="@+id/toggle_notifications_icon"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true" />
	    </RelativeLayout>
	    
	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:background="@color/light_grey"
	        android:orientation="horizontal"
	        android:padding="10dp" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:layout_toLeftOf="@+id/toggle_mobile_hires"
	            android:gravity="center_vertical"
	            android:paddingRight="5dip"
	            android:text="@string/settings_mobile_hires"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <ToggleButton
	            android:id="@+id/toggle_mobile_hires"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true" />
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:background="@color/light_grey"
	        android:orientation="horizontal"
	        android:padding="10dp" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:layout_toLeftOf="@+id/toggle_wifi_hires"
	            android:gravity="center_vertical"
	            android:paddingRight="5dip"
	            android:text="@string/settings_wifi_hires"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <ToggleButton
	            android:id="@+id/toggle_wifi_hires"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true" />
	    </RelativeLayout>
	</LinearLayout>

</ScrollView>