<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sombre"
            android:contentDescription="@null" />

        <LinearLayout
            android:id="@+id/item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/container_round_bottom"
            android:orientation="vertical" >
			
			<RelativeLayout
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content" >
	            <ProgressBar
	    		    android:id="@+id/progress_bar"
	    		    android:layout_width="wrap_content"
	    		    android:layout_height="wrap_content"
	    		    android:layout_centerInParent="true" />
	            
	            <com.edaviessmith.mindcrack.util.ResizableImageView
	                android:id="@+id/image"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:scaleType="centerCrop" />

	            <ImageView
	                android:id="@+id/youtube_play"
	                android:layout_width="80dp"
	                android:layout_height="80dp"
	                android:layout_centerHorizontal="true"
	                android:layout_centerVertical="true"
	                android:contentDescription="@string/youtube_title"
	                android:src="@drawable/youtube"
	                android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingLeft="@dimen/item_padding"
                android:paddingRight="@dimen/item_padding"
                android:paddingTop="@dimen/item_padding"
                android:text="@string/loading_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
            
                 <TextView
	                android:id="@+id/domain"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:paddingBottom="@dimen/item_padding"
	                android:paddingLeft="@dimen/item_padding"
	                android:text="@string/loading_date"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textColor="@color/grey_text" />
                
	            <TextView
	                android:id="@+id/comments"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="right"
	                android:paddingBottom="@dimen/item_padding"
	                android:paddingRight="@dimen/item_padding"
	                android:text="@string/loading_date"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textColor="@color/grey_text" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>